[gd_scene load_steps=5 format=3 uid="uid://cxakkkvtfndqw"]

[ext_resource type="Texture2D" uid="uid://c0cigv0n1xvqc" path="res://assets/Towers/Tower Archer/Base.png" id="1_mx743"]
[ext_resource type="Script" path="res://ui/tower_place.gd" id="1_yt52g"]
[ext_resource type="Texture2D" uid="uid://c515rew2aijfy" path="res://assets/Buildings and Object/Artboard 10.png" id="3_vi4pc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_juw2g"]
size = Vector2(131.5, 118)

[node name="TowerPlace" type="Area2D"]
script = ExtResource("1_yt52g")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -86.0
offset_top = -60.0
offset_right = 106.0
offset_bottom = 164.0
texture = ExtResource("1_mx743")

[node name="Hovered" type="TextureRect" parent="."]
auto_translate_mode = 1
visible = false
offset_left = -76.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 157.0
texture = ExtResource("3_vi4pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.25, 83)
shape = SubResource("RectangleShape2D_juw2g")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
